@@ -3,30 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Armata|Carme' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Carme' rel='stylesheet' type='text/css'>
 	<title>Andy Tran</title>
 </head>
 <body>
 	<header>
-		<a href="/"><div class="title">Andy Tran</div></a>
-		<nav>
-			<ul class="menu">	
-				<li>
-					<a href="/about">About<em>Info, Resume, & Contact</em></a>
-				</li>
-				<li>
-					<a href = "/blog">Blog<em>Thoughts on various topics</em></a>
-				</li>
-				<li>
-					<a href = "/projects">Projects<em>Stuff I work on in my free time</em></a>
-				</li>
-			</ul>
-		</nav>
+		<div class="title">Andy Tran</div>
+		<ul class="menu">	
+			<li><a href = "/blog">BLOG<em>Thoughts & Ideas</em></a></li>
+			<li><a href = "/projects">PROJECTS<em>Progress & Results</em></a></li>
+			<li><a href="/about">ABOUT<em>Info & Contact</em></a></li>
+		</ul>
 	</header>
 	<img src= "underconstruction.jpg" alt="Under Construction">
 	<div class="footer">
         <small>Hosted on <a href="http://pages.github.com">GitHub Pages</a>
-		<br>Last updated on <a href='http://andyjtran.com/changelog.txt'>5 September 2013</a></small>
+		<br>Last updated on <a href="/changelog.txt" target="_blank">6 September 2013</a></small>
     </div>
 </body>
 </html>
